Bug 374951 - clazy_connect_non-signal and qOverload error
Summary: clazy_connect_non-signal and qOverload error
Status: RESOLVED FIXED
Alias: None
Product: clazy
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-12 10:41 UTC by eric.lemanissier
Modified: 2017-01-14 12:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description eric.lemanissier 2017-01-12 10:41:06 UTC
For each connect using qOverload for signal selection (I , Clazy triggers the following error:
[-Wclazy-connect-non-signal]: internal error: couldn't find method from pmf connect at /home/eric/Qt/5.7/gcc_64/include/QtCore/qobject.h:298:5
I did not test on the slot side
Comment 1 Sergio Martins 2017-01-14 12:53:08 UTC
Git commit 0858eaa04dd6ed7493dca6806664c8f678d9cb39 by Sergio Martins.
Committed on 14/01/2017 at 12:48.
Pushed by smartins into branch 'master'.

connect-non-signal: Fix false positive with qOverload()

M  +33   -1    QtUtils.cpp
M  +2    -0    QtUtils.h
A  +22   -0    tests/connect-non-signal/bug374951.cpp     [License: UNKNOWN]  *
A  +1    -0    tests/connect-non-signal/bug374951.cpp.expected
M  +5    -0    tests/connect-non-signal/config.json

The files marked with a * at the end have a non valid license. Please read: http://techbase.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://commits.kde.org/clazy/0858eaa04dd6ed7493dca6806664c8f678d9cb39