connect-non-signal: Fix false positive with qOverload()

BUG: 374951